// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a label correctly 1`] = `
<View>
  <View>
    <Text
      style={
        Array [
          undefined,
        ]
      }
    >
      Ermahgerd Berks
    </Text>
  </View>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      keyboardType="default"
      rejectResponderTermination={true}
      returnKeyType="done"
      secureTextEntry={false}
      underlineColorAndroid="white"
    />
  </View>
</View>
`;

exports[`renders password fields (using secureTextEntry) 1`] = `
<View>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      keyboardType="default"
      rejectResponderTermination={true}
      returnKeyType="done"
      secureTextEntry={true}
      underlineColorAndroid="white"
    />
  </View>
</View>
`;

exports[`renders with no label 1`] = `
<View>
  <View>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      keyboardType="default"
      rejectResponderTermination={true}
      returnKeyType="done"
      secureTextEntry={false}
      underlineColorAndroid="white"
    />
  </View>
</View>
`;
